--- a/main.html
+++ b/main.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/button/button1.html">
-    <link rel="stylesheet" href="/button/button2/button2.html">
-    <title>ButtonThingy</title>
+    <link rel="stylesheet" href="main.css">
+    <title>Button Thingy</title>
 </head>
 <body>
-    
+    <div class="center">
+        <a href="/main/home/home.html">
+            <button id="_btn" class="btn">Don't Click Me</button>
+        </a>
+    </div>
 </body>
 </html>
